--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,35 +1,25 @@
-<!-- 
-<nav>
-  <div id="countdown"></div>
+<!-- app/views/layouts/_navbar.html.erb -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <%= link_to "YourAppName", root_path, class: "navbar-brand" %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to 'Tickets', tickets_index_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Customers', class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Settings', class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'User Account', class: "nav-link" %>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
-
-  <script>
-    // Get the end time from Rails
-    var endTime = new Date("<%= cookies.encrypted[:expire_time] %>").getTime();
-    console.log (endTime);
-    // Update the count down every 1 second
-    var x = setInterval(function() {
-
-      // Get today's date and time
-      var now = new Date().getTime();
-
-      // Find the distance between now and the count down date
-      var distance = endTime - now;
-
-      // Time calculations for hours, minutes and seconds
-      var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-      var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-      // Display the result in the element with id="countdown"
-      document.getElementById("countdown").innerHTML = minutes + "m " + seconds + "s ";
-
-      // If the count down is finished, write some text
-      if (distance < 0) {
-        clearInterval(x);
-        document.getElementById("countdown").innerHTML = "TOKEN EXPIRED";
-      }
-    }, 1000);
-  </script>
-  -->
-
-  
