--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,25 +1,23 @@
-<!-- app/views/layouts/_navbar.html.erb -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <%= link_to "YourAppName", root_path, class: "navbar-brand" %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+<nav class="navbar">
+  <div class="nav-container">
+    <h2>Post Sales</h2>
+      <ul class="nav-items">
         <li class="nav-item">
           <%= link_to 'Tickets', tickets_index_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Customers', class: "nav-link" %>
+          <%= link_to 'Customers', class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to 'Settings', class: "nav-link" %>
+          <%= link_to 'Settings', class: "nav-link" do %>
+          <span class="material-symbols-outlined">settings</span>
+          <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to 'User Account', class: "nav-link" %>
+          <%= link_to 'User Account', class: "nav-link" do %>
+          <span class="material-symbols-outlined">person</span>
+          <% end %>
         </li>
       </ul>
-    </div>
   </div>
 </nav>
