--- a/app/views/user_mailer/testEmail.html.erb
+++ b/app/views/user_mailer/testEmail.html.erb
@@ -1,2 +1,3 @@
 Dear <b>Aniket</b><br><br>
 Thanks for visiting our site . Please share your valuable feedback by click on the link given below:<br><br>
+New Mail 2
