--- a/app/views/user_mailer/testEmail.html.erb
+++ b/app/views/user_mailer/testEmail.html.erb
@@ -1,3 +1,22 @@
-Dear <b>Aniket</b><br><br>
-Thanks for visiting our site . Please share your valuable feedback by click on the link given below:<br><br>
-New Mail 2
+     <div class="ticket-container">
+      <div class="ticket-info">
+        <h1>Ticket #<%= @ticket["ticketNumber"] %> - <%= @ticket["subject"] %></h1>
+      </div>
+        <% @threads["data"].each_with_index do |thread, index| %>
+          <div class="thread" onclick="toggleThreadDetails(this)">
+            <div class="thread-summary">
+              <p><strong>Author Name:</strong> <%= thread["author"]["name"] %></p>
+              <% summary_parts = thread["summary"].partition("How would you rate our customer service? Good Bad") %>
+              <p><strong>Summary:</strong> <%= summary_parts.first %></p>
+              <% if summary_parts.second %>
+                <p><%= summary_parts.second %></p>
+              <% end %>
+              <p><strong>Created:</strong> <%= time_ago_in_words(Time.parse(thread["createdTime"])) %> ago</p>
+              <% if thread["cc"].present? %>
+                <p><strong>CC:</strong> <%= thread["cc"] %></p>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    
