--- a/app/views/user_mailer/testEmail.html.erb
+++ b/app/views/user_mailer/testEmail.html.erb
@@ -1,5 +1,5 @@
 <div>
-    <% @filter_contents.each do |filter_content|%>
-    <%= filter_content %><br><hr><br>
+    <% @contents.each do |content|%>
+      <%= content %>
     <% end %>
 </div>
