--- a/app/views/user_mailer/testEmail.html.erb
+++ b/app/views/user_mailer/testEmail.html.erb
@@ -1,3 +1,1 @@
-    <% @contents.each do |content|%>
-    <%= sanitize content, tags: %w(a p div span img br h1 h2 h3 h4 h5 h6 ul ol li strong em b i u), attributes: %w(href src style) %>
-    <% end %>
+    <%= sanitize @content, tags: %w(a p div span img br h1 h2 h3 h4 h5 h6 ul ol li strong em b i u), attributes: %w(href src style) %>
