--- a/app/views/user_mailer/testEmail.html.erb
+++ b/app/views/user_mailer/testEmail.html.erb
@@ -1,2 +1,2 @@
-    <!-- <h3><%= @assigned_by%></h3> -->
+    <h4>Mail From <%= @author%></h4>
     <%= sanitize @content, tags: %w(a p div span img br h1 h2 h3 h4 h5 h6 ul ol li strong em b i u), attributes: %w(href src style) %>
