--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,8 @@
 <style>
 .navbar {
+    position: fixed;
+    width: 95vw;
+    top: 0;
     background-color: #f8f9fa;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
