--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,17 +1,15 @@
 <style>
 .tickets {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 800px;
-    margin: auto;
+    width: 97%;
+    margin: 6% 0;
     padding: 20px;
-    background-color: #f9f9f9;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.tickets h1 {
+.tickets h2 {
     color: #333;
-    text-align: center;
+    text-align: left;
     margin-bottom: 20px;
 }
 
@@ -34,13 +32,6 @@
     color: #333;
 }
 
-.ticket .info {
-    background-color: #f5f5f5;
-    padding: 10px;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: row;
-}
 
 .ticket .info p {
     font-size: 0.9rem;
@@ -48,14 +39,20 @@
 }
 
 .info {
-    background-color: #eef2f7;
-    border-left: 5px solid #2a5298;
-    padding: 10px;
     margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .info p {
     margin: 4px 0;
+}
+
+.info-left{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .tickets a{
@@ -66,22 +63,35 @@
 </style>
 
 <div class="tickets">
-<h1>Tickets</h1>
-<% if @tickets.present? && @tickets["data"].present? %>
+    <% ticket_count=0%>
     <% @tickets["data"].each do |ticket| %>
-    <%= link_to tickets_threads_path(ticket) do %>
-    <div class="ticket">
-      <p><%= ticket["subject"] %></p>
-        <div class="info">
-            <p>#<%= ticket["ticketNumber"] %></p>&nbsp;<p>--</p>&nbsp;
-            <p><%= ticket["email"] %></p>&nbsp;<p>--</p>&nbsp;
-            <p>Channel: <%= ticket["channel"] %></p>&nbsp;<p>--</p>&nbsp;
-            <p>Status: <%= ticket["status"] %></p>&nbsp;
+        <% if ticket["id"] %>
+            <% ticket_count += 1%>
+        <% end %>
+    <% end %>
+    <h2>All Tickets(<%= ticket_count%>)</h2>
+    <% if @tickets.present? && @tickets["data"].present? %>
+        <% @tickets["data"].each do |ticket| %>
+        <%= link_to tickets_threads_path(ticket) do %>
+        <div class="ticket">
+        <p><%= ticket["subject"] %></p>
+            <div class="info">
+                <div class="info-left">
+                    <p>#<%= ticket["ticketNumber"] %></p>&nbsp;<p>-</p>&nbsp;
+                    <p><%= ticket["email"] %></p>&nbsp;<p>-</p>&nbsp;
+                    <p><%= time_ago_in_words(ticket["createdTime"]) %> ago</p>&nbsp;&nbsp;
+                </div>
+                    <div class="info-left">
+                    <p>Channel: <%= ticket["channel"] %></p>&nbsp;<p>-</p>&nbsp;
+                    <p>Status: <%= ticket["status"] %></p>&nbsp;<p>-</p>&nbsp;
+                    <p>Threads: <%= ticket["threadCount"]%></p>
+                </div>
+
+            </div>
         </div>
-      </div>
-    <% end %>
-    <% end %>
-<% else %>
-  <p>No tickets found.</p>
+        <% end %>
+        <% end %>
+    <% else %>
+    <p>No tickets found.</p>
 <% end %>
 </div>
