--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,30 +1,27 @@
 <style>
 .tickets {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width: 97%;
-    margin: 6% 0;
-    padding: 20px;
-    border-radius: 8px;
+    width: 100%;
+    margin:7% 0;
 }
 
 .tickets h2 {
     color: #333;
     text-align: left;
     margin-bottom: 20px;
+    padding:0 2%;
 }
 
 .ticket {
     background-color: #ffffff;
     border: 1px solid #eaeaea;
-    border-radius: 5px;
-    margin-bottom: 15px;
-    padding: 15px;
-    transition: box-shadow 0.3s;
+    padding:1% 2%;
+    transition: all 0.3s;
 
 }
 
 .ticket:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    background-color: #f6f4ff;
 }
 
 .ticket p {
@@ -39,10 +36,9 @@
 }
 
 .info {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 0.2fr 5fr 2fr;
+    align-items: center;
 }
 
 .info p {
@@ -74,19 +70,23 @@
         <% @tickets["data"].each do |ticket| %>
         <%= link_to tickets_threads_path(ticket) do %>
         <div class="ticket">
-        <p><%= ticket["subject"] %></p>
             <div class="info">
-                <div class="info-left">
-                    <p>#<%= ticket["ticketNumber"] %></p>&nbsp;<p>-</p>&nbsp;
-                    <p><%= ticket["email"] %></p>&nbsp;<p>-</p>&nbsp;
-                    <p><%= time_ago_in_words(ticket["createdTime"]) %> ago</p>&nbsp;&nbsp;
+                <div>
+                    <%= ticket["lastThread"]["direction"]%>
                 </div>
-                    <div class="info-left">
+                <div>
+                    <p><%= ticket["subject"] %></p>
+                        <div class="info-left">
+                            <p>#<%= ticket["ticketNumber"] %></p>&nbsp;<p>-</p>&nbsp;
+                            <p><%= ticket["email"] %></p>&nbsp;<p>-</p>&nbsp;
+                            <p><%= time_ago_in_words(ticket["createdTime"]) %> ago</p>&nbsp;&nbsp;
+                        </div>
+                    </div>
+                    <div class="info-left", style="text-align: right;">
                     <p>Channel: <%= ticket["channel"] %></p>&nbsp;<p>-</p>&nbsp;
                     <p>Status: <%= ticket["status"] %></p>&nbsp;<p>-</p>&nbsp;
                     <p>Threads: <%= ticket["threadCount"]%></p>
                 </div>
-
             </div>
         </div>
         <% end %>
@@ -95,3 +95,7 @@
     <p>No tickets found.</p>
 <% end %>
 </div>
+
+<script>
+    
+</script>
