--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -81,6 +81,9 @@
         </div>
         <div class="nav-items-left-right">
             <p class="nav-item">
+                <%= link_to 'Reports',tickets_reports_path, class: "nav-link" %>
+            </p>
+            <p class="nav-item">
                 <%= link_to 'Settings', class: "nav-link" do %>
                 <span class="material-symbols-outlined">settings</span>
                 <% end %>
