--- a/app/views/user_mailer/zohoMail.html.erb
+++ b/app/views/user_mailer/zohoMail.html.erb
@@ -1,3 +1,3 @@
-<h4><%= @agent_name %></h4>
-<p>Note: <%= @note %></p>
+<h3><%= @agent_name %></h3>
+<h4>Note: <%= @note %></h4><hr><br>
 <%= render html: @content.html_safe%>
