--- a/app/views/user_mailer/zohoMail.html.erb
+++ b/app/views/user_mailer/zohoMail.html.erb
@@ -4,4 +4,5 @@
 <% else %>
     <hr><br>
 <% end %>
+<!-- <a href="https://0835-49-37-10-9.ngrok-free.app/" -->
 <%= render html: @content.html_safe%>
