--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,11 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <style>
-    *{
-      margin:0;
-      padding:0;
-    }
-  </style>
 </head>
 <body>
-  <%= render 'layouts/navbar' %>
+  <% unless controller_name == 'tickets' && action_name == 'issue' %>
+    <%= render 'layouts/navbar' %>
+  <% end %>
   <%= yield %>
-
 </body>
 </html>
