--- a/app/views/tickets/thankYou.html.erb
+++ b/app/views/tickets/thankYou.html.erb
@@ -8,10 +8,30 @@
 	<style>
 		@import url(//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css);
 		@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
+        @media (max-width: 800px) {
+            body{
+                margin: 40% 0;
+            }
+            html {
+            font-size: 16px;
+            background-color: #fffffe;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            }
+        }
 	</style>
 	<link rel="stylesheet" href="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/default_thank_you.css">
 	<script src="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/jquery-1.9.1.min.js"></script>
 	<script src="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/html5shiv.js"></script>
+    <style>
+    body{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+    </style>
 </head>
 <body>
 	<header class="site-header" id="header">
