--- a/app/views/user_mailer/assignee_reminder.html.erb
+++ b/app/views/user_mailer/assignee_reminder.html.erb
@@ -9,8 +9,9 @@
     <p>This is a reminder that the issue reported by <%= @data["agent_name"] %> via email remains unresolved in our system. We urge you to address this matter promptly.</p>
     <p>If the issue has been resolved but not yet marked as such, please use the button below to update the status.</p>
     <div>
+        <p>Assignee Name: <%= @assignee_name%></p>
         <% @ticket_id.each_with_index do |id, index|%>
-        <p>subject:<%= @subject[index]%></p>
+        <p>subject: <%= @subjects[index]%></p>
         <p>On: <%= @assigned_date[index] %></p>
         <a href="https://ee9c-49-37-8-255.ngrok-free.app/tickets/issue?ticketId=#{id}&agent_id=#{@agent_id}&assignee_name=#{@assignee_name}">Issue Solved</a>
         <% end %>
