--- a/app/views/user_mailer/assignee_reminder.html.erb
+++ b/app/views/user_mailer/assignee_reminder.html.erb
@@ -13,7 +13,7 @@
         <% @ticket_id.each_with_index do |id, index|%>
         <p>subject: <%= @subjects[index]%></p>
         <p>On: <%= @assigned_date[index] %></p>
-        <a href="https://ee9c-49-37-8-255.ngrok-free.app/tickets/issue?ticketId=#{id}&agent_id=#{@agent_id}&assignee_name=#{@assignee_name}">Issue Solved</a>
+        <a href="https://4e24-49-37-8-255.ngrok-free.app/tickets/issue?ticketId=#{id}&agent_id=#{@agent_id}&assignee_name=#{@assignee_name}">Issue Solved</a>
         <% end %>
     </div>
 </body>
