--- a/app/views/user_mailer/assignee_reminder.html.erb
+++ b/app/views/user_mailer/assignee_reminder.html.erb
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <p>This is a reminder that the issue reported by <%= @data["agent_name"] %> via email remains unresolved in our system. We urge you to address this matter promptly.</p>
-    <p>If the issue has been resolved but not yet marked as such, please use the button below to update the status.</p>
-    <div>
-        <p>Assignee Name: <%= @assignee_name%></p>
+<body style="font-family: Arial, sans-serif; color: #333;">
+    <h3>This is a reminder that the customer's issue sent to you by <%= @data["agent_name"] %> via email remains unresolved in our system. We urge you to address this matter promptly.</h3>
+    <div style="margin-top: 20px;">
         <% @ticket_id.each_with_index do |id, index|%>
-        <p>subject: <%= @subjects[index]%></p>
-        <p>On: <%= @assigned_date[index] %></p>
-        <a href="https://4e24-49-37-8-255.ngrok-free.app/tickets/issue?ticketId=#{id}&agent_id=#{@agent_id}&assignee_name=#{@assignee_name}">Issue Solved</a>
+        <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
+            <p style="font-weight: bold;">Subject: <%= @subjects[index]%></p>
+            <p>Assigned On: <%= DateTime.parse(@assigned_date[index]).new_offset("+05:30").strftime("%B %d, %Y %I:%M %p") %></p>
+            <p>If the issue has been resolved but not yet marked as such, please use the button below to update the status.</p>
+            <a href="https://4e24-49-37-8-255.ngrok-free.app/tickets/issue?ticketId=<%= id %>&agent_id=<%= @agent_id %>&assignee_name=<%= @assignee_name %>" style="display: inline-block; padding: 8px 12px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px;">Issue Solved</a>
+        </div>
         <% end %>
     </div>
 </body>
